--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".users" />
         <activity android:name=".OnLoginActivity" />
         <activity android:name=".EditDetails" />
-        <activity android:name=".ProfileActivity2"></activity>
+        <activity android:name=".ProfileActivity2" />
+        <activity android:name=".Edit"></activity>
     </application>
 
 </manifest>
