--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <activity android:name=".OnLoginActivity" />
         <activity android:name=".EditDetails" />
         <activity android:name=".ProfileActivity2" />
-        <activity android:name=".Edit"></activity>
+        <activity android:name=".Edit" />
+        <activity android:name=".Attendance" />
+        <activity android:name=".Courses"></activity>
     </application>
 
 </manifest>
