--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".ProfileActivity2" />
         <activity android:name=".Edit" />
         <activity android:name=".Attendance" />
-        <activity android:name=".Courses"></activity>
+        <activity android:name=".Courses" />
+        <activity android:name=".Erase"></activity>
     </application>
 
 </manifest>
