--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -37,14 +37,16 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-auth:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
-    
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.android.volley:volley:1.0.0'
-
+    compile 'com.google.firebase:firebase-storage:10.2.0'
     testCompile 'junit:junit:4.12'
 }
 
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
 
 
