--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +33,10 @@
         <activity android:name=".Edit" />
         <activity android:name=".Attendance" />
         <activity android:name=".Courses" />
-        <activity android:name=".Erase"></activity>
+        <activity android:name=".Erase" />
+        <activity android:name=".GameActivity" />
+        <activity android:name=".TakePicActivity" />
+        <activity android:name=".RegPicActivity"></activity>
     </application>
 
 </manifest>
